<resources>
    <string name="reg_tv_hello">Привет!</string>
    <string name="reg_tv_hello_body">Я твой консультант по питанию. Расскажи мне о себе.</string>
    <string name="auth_hello_bth_next">Дальше</string>
    <string name="auth_hint_email">Имейл</string>
    <string name="auth_hint_password">Пароль</string>
    <string name="auth_signin_btn_signin">Войти</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_status_fmt">Email User: %1$s </string>
    <string name="auth_failed">Authentication failed</string>
    <string name="empty_field">empty_field</string>
    <string name="reg_et_hello">Добро пожаловать!</string>
    <string name="reg_et_have_account">Есть аккаунт?</string>
    <string name="reg_btn_reg">Регистрация</string>
    <string name="reg_btn_login">Войти</string>
    <string name="todo">TODO</string>
    <string name="app_name">Как Похудеть за неделю! Диета - это просто! </string>
    <string name="check_your_connect">Check your internet</string>
    <string name="menu_drawer_settings">Настройки</string>
    <string name="nav_title">Диета - это просто!</string>
    <string-array name="tab_title">
        <item>Суть диеты</item>
        <item>F.A.Q.</item>
        <item>Выход из Диеты</item>
        <item>Противопоказания</item>
        <item>Настройки</item>
    </string-array>
    <string name="tab_core"><![CDATA[
    <p>Суть диеты</p>
<p>1. Ежедневное чередование белков и углеводов.<br />2. Раздельное питание по особой схеме. <br />3. Правильная последовательность суточных монодиет обеспечивает нормальный обмен веществ и резкое снижение веса.</p>
<p>Менять последовательность дней нельзя. Рацион питания продуман таким образом, что каждый последующий день не только насыщает организм полезными веществами в достаточном количестве, но и подготавливает &laquo;почву&raquo; для похудения в дальнейшем. Едим рыбу &ndash; насыщаем организм полиненасыщенными жирными кислотами. На следующий день овощное меню и калории тратятся на переваривание пищи, содержащей клетчатку. Куриное мясо (в третий день) насыщает белком, не допуская интоксикации, обеспечивая полноценное питание и рост мышц. А в 4-й день организм тратит силы на переваривание сложных углеводов. Далее творог помогает насытить организм белком. В последний день результаты закрепляются за счёт того, что в пищу употребляется большое количество пектиновых волокон, углеводов и фруктовых соков.</p>
        ]]></string>
    <string name="tab_faq"><![CDATA[
    <p>Часто задаваемые вопросы</p>
<p>День 1<br />В Лепестковой диете кроме рыбы можно использовать морепродукты: мидии, креветки, кальмары. Но они имеют повышенное содержание жиров, поэтому их рекомендуется употреблять не ранее, чем после второго круга лепестков. Так же можно кушать морскую капусту(без добавления масла). Высоким содержанием йода отличается морская капуста, что служит основанием для включения ее в пищевой рацион. Морская капуста применяется в качестве слабительного средства при некоторых видах функциональных запоров. Низкая калорийность позволяет её использовать при лечении ожирения. Но есть и противопоказания. Морская капуста противопоказана при повышенной кислотности желудка. По поводу консервы в собственном соку, как пишут производители на этикетке, в их составе только соль, рыба и специи. Но мы не можем быть уверены, что для консервирования используется качественная рыба, поэтому рекомендуем не есть на диете консервы.</p>
<p>День 2<br />Для овощного дня подходят все овощи и зелень, а так же щавель и чеснок.<br />Картофель. Из&ndash;за высокого содержания солей калия его можно употреблять при заболеваниях сердечно-сосудистой системы и почек, сопровождающихся отёками. Но, поскольку калорийность картофеля достаточно велика, тем, кто склонен к полноте, потребление картофеля следует ограничить.<br />Огурцы в небольших количествах содержат витамины С , В1, В2, а из минеральных солей преобладают соли калия. Клетчатка, содержащаяся в огурцах, благотворно влияет на моторику кишечника. Полезны при хронических запорах, заболеваниях сердечно&ndash;сосудистой системы, печени, почек, ожирении, при некоторых заболеваниях суставов, связанных с обменом веществ.<br />Морковь. Содержит каротин из которого в организме человека образуется витамин А. Так же содержит витамины С и группы В. В больших количествах содержит соли калия, поэтому рекомендована при заболеваниях сердечно&ndash;сосудистой системы, при болезнях желудка и кишечника, почек и запорах. Во время обострения заболеваний, таких как: гастрит, язвенная болезнь желудка и двенадцатиперстной кишки, морковь следует употреблять только в отварном и измельчённом виде. Морковный сок и салаты не целесообразно долго хранить, так как под влиянием кислорода, каротин быстро разрушается.<br />Капуста белокочанная. При склонности к метеоризму, не следует есть в больших количествах , она усиливает вздутие живота. Так же с осторожностью следует её употреблять склонным к образованию узлов щитовидной железы.<br />Салат зелёный полезен при заболеваниях сердечно&ndash;сосудистой системы, сахарным диабетом, ожирением, хроническими заболеваниями печени и жёлчного пузыря. Есть и противопоказания. Не следует им злоупотреблять из-за содержания щавелевой кислоты, при мочекаменной болезни, сопровождающейся образованием оксалатных камней в мочевыводящих путях.<br />Сельдерей полезно употреблять при заболеваниях почек, нефрите, мочекаменной болезни, воспалении предстательной железы, подагре, заболеваниях сердечно&ndash;сосудистой системы. Есть и противопоказания. Необходимо ограничить или отказаться совсем от сельдерея, при следующих заболеваниях: при обострении язвенной болезни, панкреатите.<br />Укроп полезен при заболеваниях печени и жёлчного пузыря, почек, при гастрите с пониженной кислотностью, при ожирении, при повышенном газообразовании в кишечнике.<br />Шпинат рекомендуется включать больным гипертонической болезнью, сахарным диабетом и ожирением. Из&ndash;за высокого содержания щавелевой кислоты не рекомендуется при некоторых заболеваниях печени, жёлчного пузыря и почек, подагре<br />Щавель следует исключить из питания при мочекаменной болезни из&ndash;за образования оксалатов в мочевыводящих путях.</p>
<p>День 3<br />В третий белковый день кроме куриной грудки, можно кушать мясо индейки и на 2&ndash;3 круге телятину(мякоть).</p>
<p>День 4<br />Четвертый сложно&ndash;углеводный день употребляйте любые каши, а так же - дикий рис, кус-кус, хлебцы пшенично-ржаные. Часто задаваемый вопрос по поводу кукурузы. Решайте сами есть или нет. В кукурузе: белки 8,3%%, жир 1,2%%, углеводы 71,6%% и на 100 грамм приходится 337 калорий.</p>
<p>День 5<br />Для пятого творожного дня подойдут: йогурт натуральный(несладкий), молоко, 1 яйцо, сыр нежирный (тофу, соевый сыр 1,5%% жирности, легкая брынза, фета 5-15%%) Нежирный сыр тофу - соевый сыр (жирность 1,5-4 %%), &ldquo;литовский творог&rdquo;. Нежирный сыр &ndash; Гаудетте (жирность 7 %%). Нежирный сыр &ndash; Чечил (жирность 5-10 %%). Нежирный сыр &ndash; Грюнландер, Фитнес (жирность 5-10%%). Нежирный сыр &ndash; Рикотта (жирность 13 %%). Нежирный сыр &ndash; легкая брынза, фета (жирность 5-15 %%) Нежирный сыр &ndash; Arla, Ольтермани (жирность 16-17 %%.</p>
<p>День 6<br />В шестой фруктовый день кроме фруктов можно еще кушать и ягоды, но не более 300 грамм на день.</p>
    ]]></string>
    <string name="tab_exit"><![CDATA[
    <p>Выход из диеты</p>
    <p>Важный этап, необходимый для закрепления достигнутого результата. Составьте разнообразное меню, используя те же продукты, которыми питались в течение шести дней диеты. Только теперь можно комбинировать разные блюда, а калорийность увеличивают до 1450-1750 калорий в сутки. В течение недели ешьте, соблюдая правила раздельного питания, которые гласят, что нельзя одновременно употреблять белки и углеводы, ваш меню должно быть на подобие белково-углеводной диеты (БУЧ), но с большими послаблениями. Суть в том, что организму сложно переваривать одновременно оба компонента. Здесь участвуют разные ферменты, которые не могут выделяться одновременно. В результате, процесс переваривания пищи замедляется, пища застаивается в желудке и кишечнике, появляется лишний вес.</p>
    <p>Алкоголь во время диеты &laquo;6 лепестков&raquo; употреблять нельзя. Спиртное задерживает в организме жидкость, является калорийным. Кроме того, питание в эти дни будет слишком ограниченным и напитки, содержащие алкоголь, крайне нежелательны.</p>
    <p>Если изначальный вес достаточно большой, диету можно повторить, выдержав паузу от 2 дней до одной недели&ndash; так организм немного отдохнёт и запасётся полезными веществами из продуктов, которыми вы питаетесь ежедневно.</p>
    ]]></string>
    <string name="tab_contraindications"><![CDATA[
    <p>Противопоказания</p>
<p>- заболевания ЖКТ (гастрит, гастродуоденит, язвенная болезнь желудка и/или 12-типерстной кишки);</p>
<p>- болезни почек, печени, поджелудочной железы и желчного пузыря;</p>
<p>- сахарный диабет;</p>
<p>- анемия;</p>
<p>- авитаминозы и гиповитаминозы;</p>
<p>- острые инфекционные заболевания;</p>
<p>- меньше 2-х недель после перенесенных ОРВИ и гриппа;</p>
<p>- лихорадка;</p>
<p>- беременность и период лактации.</p>
    ]]></string>
    <string name="tab_body_text_1">test</string>
    <string name="admob_interstitial" translatable="false">ca-app-pub-3050564412171997/5945782205</string>
    <string name="admob_banner" translatable="false">ca-app-pub-3050564412171997/5103473829</string>
    <string name="admob_award" translatable="false">ca-app-pub-3050564412171997/4889189478</string>
    <string name="admob_banner_viewer_activity" translatable="false">ca-app-pub-3050564412171997/6423885238</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Как Похудеть за неделю! Диета - это просто! </string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="url_gdpr" translatable="false">https://www.freeprivacypolicy.com/privacy/view/272200879b5cf29dd1b4fcd0f0299409</string>
    <string name="settings">Настройки</string>
    <string name="rate_us">Оцените нас</string>
    <string name="share">Поделиться с друзьями</string>
    <string name="accompanying_text">Все работает в реальной жизни! Попробуй и ты!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="mono_diets">Моно диеты</string>
    <string name="description_mono_diets">Список самых эффективных диет, полное описание каждой из них</string>
    <string name="calculating">Расчеты</string>
    <string name="title_calculating">Расчет идеального веса</string>
    <string name="subtitle_list_calculating">Список калькуляторов</string>
    <string name="astentic">Список калькуляторов</string>
    <string name="tall">Ваш рост (см)</string>
    <string name="your_age">Ваш возраст</string>
    <string name="sex">Ваш пол</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="calculate_btn">Рассчитать</string>
    <string name="height_lorenc">Ваш рост в сантиметрах</string>
    <string name="lorenc_calculate">Рассчитать</string>
    <string name="imt">ИМТ</string>
    <string name="description_imt">Индекс массы тела следует применять с осторожностью, исключительно для ориентировочной оценки — например, попытка оценить с его помощью телосложение профессиональных спортсменов может дать неверный результат (высокое значение индекса в этом случае объясняется развитой мускулатурой)</string>
    <string name="your_weight_in_kilo">Ваш вес в килограммах</string>
</resources>